# finanzas

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
wallet_sync/: __init__.py  __main__.py  cli.py  config.py  email_client.py  log_setup.py  models.py  post_export.py  self_transfer.py  storage.py  sync.py  wallet_export.py
wallet_sync/parsers/: __init__.py  arq.py  base.py  santander.py
wallet_sync/sinks/: __init__.py  base.py  csv_sink.py
